2007-01-17  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release 0.99.7.0

	* configure.in: Set version number to 0.99.7.0

	* Makefile.am (M4_FILES): Replace GNU make extension by listing
	all m4 files.

2007-07-17  Tomas Mraz  <t8m@centrum.cz>

	* po/*.po: Updated strings to translate.
	* po/Linux-PAM.pot: Likewise.

2007-07-16  Thorsten Kukuk  <kukuk@thkukuk.de>

	* doc/man/pam.conf-syntax.xml: Improve documentation about
	sufficient keyword (Patch by Petteri Räty <betelgeuse@gentoo.org>)

2006-12-20  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_unix/pam_unix_passwd.c (pam_sm_chauthtok): Forbid
	only '+' and '-' as first characters for account names.
	* modules/pam_unix/pam_unix_auth.c (pam_sm_authenticate): Likewise.

2006-12-18  Thorsten Kukuk  <kukuk@thkukuk.de>

	* configure.in: Fix ENOKEY check (specify errno.h as header
	file to search in).

	* configure.in: Add AM_PROG_CC_C_O.
	* libpam/Makefile.am: Add content of AM_LDFLAGS to *_LDFLAGS.
	* modules/pam_tally/Makefile.am: Likewise.
	* modules/pam_unix/Makefile.am: Likewise.

	* modules/pam_stress/pam_stress.c (pam_sm_chauthtok): Fix
	localisation of message printed to user.
	* po/de.po: Adjust translation.

2006-12-18  Tomas Mraz  <t8m@centrum.cz>

	* modules/pam_unix/pam_unix_passwd.c (pam_sm_chauthtok): Localize
	message printed to user.

	* modules/pam_unix/support.c (_unix_verify_password): Use strncmp
	only for bigcrypt result.

	* modules/pam_keyinit/pam_keyinit.c (kill_keyrings): Switch to new
	egid first, euid next. Revert euid/egid to old euid/egid and not
	ruid/rgid.
	(pam_sm_open_session): Switch to new rgid first, ruid next.

2006-12-13  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_localuser/pam_localuser.c: Add support for session
	and chauthtok [SF#1606180].
	* modules/pam_localuser/pam_localuser.8.xml: Document last change.

	* libpam/pam_audit.c (_pam_audit_writelog): Print error message
	only once.

2006-12-12  Thorsten Kukuk  <kukuk@thkukuk.de>
