@@ -22,10 +22,11 @@ AM_CFLAGS = -I$(top_srcdir)/libpam/include -I$(top_srcdir)/libpamc/include \
 AM_LDFLAGS = -no-undefined \
 	-L$(top_builddir)/libpam -lpam @LIBSELINUX@
 
-pam_selinux_check_LDFLAGS = -L$(top_builddir)/libpam_misc -lpam_misc
+pam_selinux_check_LDFLAGS = $(AM_LDFLAGS) -L$(top_builddir)/libpam_misc -lpam_misc
 
+pam_selinux_la_LDFLAGS = $(AM_LDFLAGS)
 if HAVE_VERSIONING
-  pam_selinux_la_LDFLAGS = -avoid-version -module \
+  pam_selinux_la_LDFLAGS += -avoid-version -module \
 	-Wl,--version-script=$(srcdir)/../modules.map
 endif
 
